--- a/gsoc-18.html
+++ b/gsoc-18.html
@@ -240,8 +240,8 @@
             <br>
             
             <h3 id="3wolfbeaconbackendproject">3. HowlPlay</h3>
-            <p>HowlPlay will allow hackathon organizers to have a <a href="http://timeplay.com/">TimePlay</a>-like experience for hackers. Basically, organizers will be able to have a quiz for hackers to answer, hackers will answer the quiz on their phone, score will be displayed on organizer's dashboard in real-time.</p>
-            <p>You will be working with WebSocket, and many other WebRTC technologies. The goal is to have a system that is easy to deploy for hackathon organizers, also robust enough to handle hundreds of simultaneous connections.</p>
+            <p>HowlPlay will allow hackathon organizers to have a <a href="http://timeplay.com/">TimePlay</a>-like experience for hackers. Basically, organizers will be able to have a quiz for hackers to answer, hackers will answer the quiz on their phone, scores will be displayed on organizer's dashboard in real-time.</p>
+            <p>You will be working with WebSocket and many other WebRTC technologies. The goal is to have a system that is easy to deploy for hackathon organizers, also robust enough to handle hundreds of simultaneous connections.</p>
             <p>The application architecture is fully specified on our Confluence site, <a href="https://wolfbeacon.atlassian.net/wiki/spaces/WG/pages/299171906/Software+Architecture+Documentation">check it out</a>!</p>
             <p></p>
             <p><em>Skillset</em>: Experience with <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API">WebSocket</a> and <a href="https://nodejs.org/en/">Node.js</a> are required. You should also be comfortable developing scalable applications.</p>
@@ -253,9 +253,9 @@
             <h3 id="4wolfbeaconbackendproject">4. Deployment Automation Project</h3>
             <p>WolfBeacon's backend is powered by <a href="https://aws.amazon.com/">Amazon Web Services</a>.</p>
             <p>The goal is to have an automated deployment process for our projects, we currently have a <a href="https://github.com/wolfbeacon/wolfbeacon-infra-ops">bot</a> that does some automation for us.</p>
-            <p>You will be helping to develop a complete deployment automation pipeline for WolfBeacon. You will be working with Ansible, AWS Elastic Beanstalk, AWS ECR, AWS S3, and AWS CodeBuild. We are currently seeking to implement a solution that automates secret file generation, currently all secrets are manually typed into AWS console, which is very inefficient.</p>
+            <p>You will be helping to develop a complete deployment automation pipeline for WolfBeacon. You will be working with Ansible, AWS Elastic Beanstalk, AWS ECR, AWS S3, and AWS CodeBuild. We are seeking to implement a solution that automates secret file generation. Currently all secrets are manually typed into AWS console, which is very inefficient.</p>
             <p></p>
-            <p><em>Skillset</em>: Experience with <a href="https://aws.amazon.com/">Amazon Web Services</a> and <a href="https://golang.org/">Golang</a>. Also some experience with developing applications that involve using encryption algorithms is preferred.</p>
+            <p><em>Skillset</em>: Experience with <a href="https://aws.amazon.com/">Amazon Web Services</a> and <a href="https://golang.org/">Golang</a>. Some experience with developing applications that involve using encryption algorithms is preferred.</p>
             <p><b>Mentors:</b> <a href="https://github.com/bholagabbar" target="_blank">Shreyans Sheth</a>, <a href="https://github.com/ralph-dev">Ralph</a></p>
             <p>
             <br>
