--- a/gsoc-18.html
+++ b/gsoc-18.html
@@ -243,16 +243,16 @@
             <h3 id="3wolfbeaconbackendproject">3. HowlPlay</h3>
             <p>HowlPlay will allow hackathon organizers to have a <a href="http://timeplay.com/">TimePlay</a>-like experience for hackers. Basically, organizers will be able to have a quiz for hackers to answer, hackers will answer the quiz on their phone, scores will be displayed on organizer's dashboard in real-time.</p>
             <p>You will be working with WebSocket and many other WebRTC technologies. The goal is to have a system that is easy to deploy for hackathon organizers, also robust enough to handle hundreds of simultaneous connections.</p>
-            <p>HowlPlay will contain three parts, each part require different skillsets.</p>
+            <p>HowlPlay will contain three parts, each part requires different skillsets.</p>
             <p><b>1. HowlPlay Main API</b></p>
-            <p>This is the primary API for HowlPlay, it will provide endpoints for organizers to manage quizzes for their hackathon. This part must be intergrated with existing WolfBeacon tools, such as authentication pipeline and database.</p>
+            <p>This is the primary API for HowlPlay, it will provide endpoints for organizers to manage quizzes for their hackathon. This part must be integrated with existing WolfBeacon tools, such as authentication pipeline and database.</p>
             <p><em>Skillset</em>: Experience with <a href="https://www.djangoproject.com/">Django</a> and <a href="https://www.postgresql.org/">PostgreSQL</a> are required.</p>
             <p><b>2. HowlPlay Game Server</b></p>
-            <p>Game server is where games are hosted. You will be working with WebSocket to implement a robust system that can handle hundreds of simultaneous connections with minimal latency.</p>
+            <p>The game server is where games are hosted. You will be working with WebSocket to implement a robust system that can handle hundreds of simultaneous connections with minimal latency.</p>
             <p><em>Skillset</em>: Experience with <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API">WebSocket</a> is required. Experience with developing scalable applications is a plus.</p>
             <p><b>3. HowlPlay Dashboard / PWA</b></p>
-            <p>Dashboard is where hackathon organizers can manage their quizzes, it will integrate with Main API to provide all functionalities.</p>
-            <p>PWA (Progressive Web Application) is what hackers will use to play the game, this application will communicate with Game Server to provide all functionalities.</p>
+            <p>The dashboard is where hackathon organizers can manage their quizzes, it will integrate with Main API to provide all functionalities.</p>
+            <p>The PWA (Progressive Web Application) is what hackers will use to play the game, this application will communicate with Game Server to provide all functionalities.</p>
             <p><em>Skillset</em>: Experience with <a href="https://reactjs.org/">React.js</a> and <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API">WebSocket</a> are required.</p>
             <p>The application architecture is fully specified on our Confluence site, <a href="https://wolfbeacon.atlassian.net/wiki/spaces/WG/pages/299171906/Software+Architecture+Documentation">check it out</a>!</p>
             <p></p>
