--- a/gsoc-18.html
+++ b/gsoc-18.html
@@ -222,6 +222,8 @@
             <br>
             <br>
             <h3 id="1wolfbeaconanalyticsproject">1. Analytics Dashboard Project</h3>
+            <span class="label label-default">Core Development</span>
+            <br><br>
             <p>The main objective of this project is to drive <a href="https://github.com/wolfbeacon/wolfbeacon-dashbaord">WolfBeacon's Analytics Dashboard</a> to completion.</p>
             <p>WolfBeacon's Analytics Dashboard will allow Hackathon Organizers to reach deeper into the interactions and reviews of workshops/ events and the Hackathon itself. With a modern and clean UI paired with UX design strategies, the Dashboard will revolutionize the way Hackathons are organized and how feedback is responded to within the coming years. </p>
             <p>The dashboard will be interating with <a href="https://github.com/wolfbeacon/wolfbeacon-core-api">WolfBeacon Core API</a> to provide all functionalities.</p>
@@ -232,7 +234,8 @@
             <br>
             </p>
             <h3 id="2wolfbeaconbackendproject">2. Platform Augmentation Project</h3>
-
+            <span class="label label-default">Core Development</span>
+            <br><br>
             <p>There are several parts of the WolfBeacon platform that need to be driven to completion. We are looking for a Full Stack Developer who has worked on various platforms and is willing to take on multiple development roles.</p>
             <p>First, you would be working on the <a href="https://github.com/wolfbeacon-core-api">WolfBeacon Core API project</a> to implement a robust authentication system for mobile and dashboard using Auth0, incorporating logging in appropriate places in the code, extending REST resources if required and implementing a caching system to vertically scale the system.</p>
             <p>Simultaneously, you would also working on the <a href="https://github.com/wolfbeacon/wolfbeacon-ios-client">WolfBeacon iOS</a>  and <a href="https://github.com/wolfbeacon/wolfbeacon-android-client">WolfBeacon Android</a> applications along with our core mobile developers, integrating the Core API within the apps to drive the apps to completion. </p>
@@ -241,6 +244,8 @@
             <br>
             
             <h3 id="3wolfbeaconbackendproject">3. HowlPlay</h3>
+            <span class="label label-default">Fun Project</span>
+            <br><br>
             <p>HowlPlay will allow hackathon organizers to have a <a href="http://timeplay.com/">TimePlay</a>-like experience for hackers. Basically, organizers will be able to have a quiz for hackers to answer, hackers will answer the quiz on their phone, scores will be displayed on organizer's dashboard in real-time.</p>
             <p>You will be working with WebSocket and many other WebRTC technologies. The goal is to have a system that is easy to deploy for hackathon organizers, also robust enough to handle hundreds of simultaneous connections.</p>
             <p>HowlPlay will contain three parts, each part requires different skillsets.</p>
@@ -262,6 +267,8 @@
             </p>
             
             <h3 id="4wolfbeaconbackendproject">4. Deployment Automation Project</h3>
+            <span class="label label-default">Infrastructure and Automation</span>
+            <br><br>
             <p>WolfBeacon's backend is powered by <a href="https://aws.amazon.com/">Amazon Web Services</a>.</p>
             <p>The goal is to have an automated deployment process for our projects, we currently have a <a href="https://github.com/wolfbeacon/wolfbeacon-infra-ops">bot</a> that does some automation for us.</p>
             <p>You will be helping to develop a complete deployment automation pipeline for WolfBeacon. You will be working with Ansible, AWS Elastic Beanstalk, AWS ECR, AWS S3, and AWS CodeBuild. We are seeking to implement a solution that automates secret file generation. Currently all secrets are manually typed into AWS console, which is very inefficient.</p>
