--- a/gsoc-18.html
+++ b/gsoc-18.html
@@ -279,6 +279,14 @@
             <br>
             </p>
             
+            <h3 id="5wolfbeaconbackendproject">5. Service Status Automation with Cachet</h3>
+            <span class="label label-default">Infrastructure and Automation</span>
+            <br><br>
+            <p>With many servers running, sometimes it is hard for administrators to notice a service is down and update the status page.</p>
+            <p>Service status automation project will integrate external monitoring services such as Uptime Robot with our existing <a href="https://status.wolfbeacon.com/">status dashboard</a> built using Cachet. It should update the service status automatically without human intervention. It should also integrate with AWS health check tools to notify administrators any abnormal activity, such as CPU usage spike.</p>
+            <p>This project will save a significant amount of time for our engineers, also provide insights into our existing infrastructure.</p>
+            <p><em>Skillset</em>: Experience with consuming RESTful APIs is required. Some experience with back-end development is preferred.</p>
+            <p><b>Mentors:</b> <a href="https://github.com/bholagabbar" target="_blank">Shreyans Sheth</a>, <a href="https://github.com/shaynair">Akshay</a></p>
             <br>
             <hr>
             <br>
